--- a/app/src/main/res/layout/activity_fragment_holder.xml
+++ b/app/src/main/res/layout/activity_fragment_holder.xml
@@ -5,14 +5,7 @@
     android:layout_width="match_parent"
 
     android:layout_height="match_parent">
- <androidx.appcompat.widget.Toolbar
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:id="@+id/toolbar"
-     android:background="@color/colorPrimaryDark"
-     app:popupTheme="@color/colorPrimary"
-     android:minHeight="?attr/actionBarSize"
-     />
+
 
 
     <FrameLayout
@@ -22,7 +15,10 @@
         android:id="@+id/fragment_holder"
         android:layout_weight="0.9">
     </FrameLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
+    android:layout_height="1dp"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
