--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/colorPrimary"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_weight="0.2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:orientation="horizontal"
+     android:padding="5dp"
+     android:textAlignment="center"
+     android:layout_height="wrap_content">
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_weight="0.5"
+         android:textAlignment="center"
+         android:text="Username:"
+         android:layout_height="wrap_content"/>
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_weight="0.5"
+         android:text="Username"
+         android:id="@+id/user_name_print"
+         android:layout_height="wrap_content"/>
+ </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_weight="0.5"
+            android:textAlignment="center"
+            android:text="Phone number"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Username:"
+            android:id="@+id/phone_print"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_weight="0.5"
+            android:textAlignment="center"
+            android:text="Team"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Username:"
+            android:id="@+id/team_print"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_weight="0.1"
+    android:orientation="vertical"
+    android:padding="25dp"
+    android:gravity="center"
+   android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="match_parent"
+        android:textSize="12dp"
+        android:textAlignment="center"
+        android:text="Sign out from the app."
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="match_parent"
+        android:text="Sign out"
+        android:textColor="#fff"
+        android:background="@drawable/rounded"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="0.1"
+        android:padding="25dp"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
 
 </LinearLayout>
