--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,5 +2,106 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="0.3"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:src="@drawable/mysafety"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:textSize="24dp"
+        android:text="My Safety OmniBus"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_height="wrap_content"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:textSize="14dp"
+        android:text="Create Account"
+        android:textAlignment="center"
+        android:padding="5dp"
+        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="0.1"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_weight="0.6"
+        android:orientation="vertical"
+        android:textAlignment="center"
+        android:padding="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:text="Username:"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/user_name"
+            android:inputType="text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:text="Password:"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/pass_word"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:text="Confirm Password:"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/confirm_pass_word"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:text="Contact Number:"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/contact_number"
+            android:inputType="number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:text="Sign in as:"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/team_selector"
+            android:hint="Pick a group"
+            android:clickable="true"
+            android:inputType="none"
+            android:focusable="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#FFF"
+            android:id="@+id/create_submit"
+            android:background="@drawable/rounded"
+            android:text="Create Account"
+            />
+    </LinearLayout>
 </LinearLayout>
