--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,67 +3,93 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_weight="0.2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
- <LinearLayout
-     android:layout_width="match_parent"
-     android:orientation="horizontal"
-     android:padding="5dp"
-     android:textAlignment="center"
-     android:layout_height="wrap_content">
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_weight="0.5"
-         android:textAlignment="center"
-         android:text="Username:"
-         android:layout_height="wrap_content"/>
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_weight="0.5"
-         android:text="Username"
-         android:id="@+id/user_name_print"
-         android:layout_height="wrap_content"/>
- </LinearLayout>
-    <LinearLayout
+        android:layout_weight="0.1"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        android:textAlignment="center"
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_height="wrap_content">
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_weight="0.5"
+            android:src="@drawable/mysafety"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"></ImageView>
+        <TextView
+            android:layout_width="match_parent"
+            android:text="My Safety Omnibus"
+            android:textSize="24dp"
+            android:textStyle="bold"
             android:textAlignment="center"
-            android:text="Phone number"
             android:layout_height="wrap_content"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Username:"
-            android:id="@+id/phone_print"
+            android:layout_width="match_parent"
+            android:text="Account information"
+            android:textAlignment="center"
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        android:textAlignment="center"
+        android:orientation="vertical"
+        android:padding="25dp"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_weight="0.5"
-            android:textAlignment="center"
-            android:text="Team"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Username:"
-            android:id="@+id/team_print"
-            android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="0.5"
+                android:text="Username:"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="0.5"
+                android:text="Username"
+                android:id="@+id/user_name_print"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="0.5"
+                android:text="Phone number:"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="0.5"
+                android:text="Username:"
+                android:id="@+id/phone_print"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="0.5"
+                android:textStyle="bold"
+                android:text="Logged in as:"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_weight="0.5"
+                android:text="Username:"
+                android:id="@+id/team_print"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
     </LinearLayout>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_weight="0.1"
@@ -81,16 +107,10 @@
         android:layout_width="match_parent"
         android:text="Sign out"
         android:textColor="#fff"
+        android:id="@+id/logout_button"
         android:background="@drawable/rounded"
         android:layout_height="wrap_content"/>
 </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_weight="0.1"
-        android:padding="25dp"
-        android:layout_height="wrap_content">
-
-    </LinearLayout>
 
 </LinearLayout>
