--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -7,7 +7,7 @@
         >
     </item>
 
-    <item android:title="Setting"
+    <item android:title="Hazard"
         android:id="@+id/action_setting"
         android:icon="@drawable/ic_settings_black_24dp"
         >
@@ -15,6 +15,11 @@
 
     <item android:title="Report"
         android:id="@+id/action_report"
+        android:icon="@drawable/ic_email_black_24dp"
+        >
+    </item>
+    <item android:title="Notification"
+        android:id="@+id/action_notification"
         android:icon="@drawable/ic_notifications_black_24dp"
         >
     </item>
