--- a/app/src/main/res/layout/activity_fragment_holder.xml
+++ b/app/src/main/res/layout/activity_fragment_holder.xml
@@ -3,18 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-
     android:layout_height="match_parent">
-
-
-
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:id="@+id/fragment_holder"
-        android:layout_weight="0.9">
-    </FrameLayout>
+        android:layout_weight="0.9"
+        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:id="@+id/fragment_holder"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/loading_screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#000"
+            android:visibility="gone"
+            android:alpha="0.8"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <ProgressBar
+                android:indeterminateTint="@color/colorPrimary"
+                android:layout_width="50dp"
+                android:layout_gravity="center"
+                android:layout_height="50dp"/>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:background="@color/colorPrimary"
