--- a/app/src/main/res/layout/fragment_hazard.xml
+++ b/app/src/main/res/layout/fragment_hazard.xml
@@ -30,6 +30,28 @@
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
+
+        <com.jjoe64.graphview.GraphView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_weight="0.5"
+            android:id="@+id/graph_view2"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textAlignment="center"
+                android:layout_weight="0.5"
+                android:id="@+id/peak2"
+                android:text="Fetching Data "
+                android:textColor="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 
