--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 <LinearLayout
@@ -8,25 +9,118 @@
     android:layout_weight="0.9"
     android:orientation="vertical"
     >
-    <ImageView
-        android:id="@+id/image_capture"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_weight="0.4"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:id="@+id/image_capture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/capture_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/camera_selector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:padding="15dp"
+                android:src="@drawable/ic_camera_alt_black_24dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:text="Select to capture image"
+                android:textColor="#FFF"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+ <LinearLayout
+     android:layout_weight="0"
+     android:layout_width="match_parent"
+     android:orientation="vertical"
+     android:padding="20dp"
+     android:layout_height="wrap_content">
+     <TextView
+         android:textAlignment="center"
+         android:id="@+id/submit_as"
+         android:layout_width="match_parent"
+         android:text="Submitting as a Faculty"
+         android:textColor="@color/colorPrimary"
+         android:textStyle="bold"
+         android:layout_marginBottom="5dp"
+         android:layout_height="wrap_content"/>
+     <TextView
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:textColor="@color/colorPrimary"
+         android:text="Incident Title"
+         android:textAlignment="center"
+         ></TextView>
+     <EditText
+         android:inputType="text"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:id="@+id/title_incident"
+         android:hint="Title"/>
+     <TextView
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:text="Incident Description"
+         android:textColor="@color/colorPrimary"
+         android:textAlignment="center"
+         ></TextView>
+     <EditText
+         android:inputType="text"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:id="@+id/desc_incident"
+         android:hint="Photo Description"/>
+         <include
+             android:id="@+id/dom_holder"
+             android:layout_marginTop="10dp"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             layout="@layout/layout_dom_incidents"
+             ></include>
+     <TextView
+         android:layout_width="match_parent"
+         android:text="@string/cred"
+         android:layout_marginTop="15dp"
+         android:layout_height="wrap_content"/>
+<Button
+    android:layout_marginTop="5dp"
+    android:id="@+id/report_submit"
+    android:layout_width="match_parent"
+    android:soundEffectsEnabled="true"
+    android:text="Submit"
+    android:textColor="#FFF"
+    android:background="@drawable/rounded"
+    android:layout_height="wrap_content"/>
+
+
+
+ </LinearLayout>
 </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="25dp"
-        android:layout_height="wrap_content">
-    <ImageButton
-        android:id="@+id/camera_selector"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/circle"
-        android:padding="15dp"
-        android:src="@drawable/ic_camera_alt_black_24dp"
-        />
-    </LinearLayout>
+
 </LinearLayout>
