--- a/app/src/main/res/layout/dialog_reports.xml
+++ b/app/src/main/res/layout/dialog_reports.xml
@@ -29,7 +29,16 @@
             android:background="@drawable/rounded"
             android:textColor="#FFF"
             android:id="@+id/button_safe"
-            android:layout_margin="25dp"
+            android:layout_margin="10dp"
+            android:layout_height="match_parent"/>
+        <Button
+            android:layout_width="match_parent"
+            android:text="MARK UNSAFE"
+            android:visibility="gone"
+            android:background="@drawable/rounded_bg_red"
+            android:textColor="#FFF"
+            android:id="@+id/button_unsafe"
+            android:layout_margin="10dp"
             android:layout_height="match_parent"/>
 
     </LinearLayout>
