--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -6,7 +6,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="0.9"
+    android:layout_weight="0.1"
     android:orientation="vertical"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -103,11 +103,19 @@
              android:layout_height="wrap_content"
              layout="@layout/layout_dom_incidents"
              ></include>
+     <CheckBox
+         android:layout_width="match_parent"
+         android:padding="15dp"
+         android:text="Are you safe?"
+         android:id="@+id/safe_box"
+         android:checked="true"
+         android:layout_height="wrap_content"/>
      <TextView
          android:layout_width="match_parent"
          android:text="@string/cred"
          android:layout_marginTop="15dp"
          android:layout_height="wrap_content"/>
+
 <Button
     android:layout_marginTop="5dp"
     android:id="@+id/report_submit"
