--- a/app/src/main/res/layout/fragment_report_list.xml
+++ b/app/src/main/res/layout/fragment_report_list.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+
+        android:id="@+id/recycler_view"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
