--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -23,4 +23,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         >
     </item>
+    <item android:title="Location"
+        android:id="@+id/action_location"
+        android:icon="@drawable/ic_location_on_black_24dp"
+        >
+    </item>
 </menu>
