--- a/app/src/main/res/layout/dialog_reports.xml
+++ b/app/src/main/res/layout/dialog_reports.xml
@@ -11,17 +11,26 @@
         android:padding="20dp"
         android:orientation="vertical"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:text="INCIDENT DETECTED"
-            android:textAlignment="center"
-            android:id="@+id/alert_incident_dialog"
-            android:layout_height="wrap_content"/>
+           <TextView
+               android:layout_width="match_parent"
+               android:text="INCIDENT DETECTED"
+               android:textAlignment="center"
+               android:id="@+id/alert_incident_dialog"
+               android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="match_parent"
             android:text="ARE YOU SAFE?"
             android:padding="10dp"
             android:textAlignment="center"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="24dp"
+            android:text="15"
+            android:textStyle="bold"
+            android:id="@+id/button_second"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_height="wrap_content"/>
         <Button
             android:layout_width="match_parent"
@@ -31,15 +40,7 @@
             android:id="@+id/button_safe"
             android:layout_margin="10dp"
             android:layout_height="match_parent"/>
-        <Button
-            android:layout_width="match_parent"
-            android:text="MARK UNSAFE"
-            android:visibility="gone"
-            android:background="@drawable/rounded_bg_red"
-            android:textColor="#FFF"
-            android:id="@+id/button_unsafe"
-            android:layout_margin="10dp"
-            android:layout_height="match_parent"/>
+
 
     </LinearLayout>
 
