--- a/app/src/main/res/layout/fragment_hazard.xml
+++ b/app/src/main/res/layout/fragment_hazard.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_weight="0.3"
         android:padding="5dp"
-        android:layout_height="wrap_content">
+        android:gravity="center"
+        android:layout_height="match_parent">
         <com.jjoe64.graphview.GraphView
             android:layout_width="match_parent"
             android:layout_height="300dp"
@@ -55,9 +58,6 @@
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_weight="0.7"
-        android:layout_height="match_parent"></LinearLayout>
+
 
 </LinearLayout>
